# django-persian-pdf

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  tox.ini
.github/workflows/: test.yml
requirements/: requirements.in
src/django_persian_pdf/: __init__.py  apps.py  compilers.py  responses.py  views.py
tests/: models.py  settings.py  test_views.py  urls.py  views.py
tests/migrations/: 0001_initial.py
tests/templates/: staff.html  staff.tex  staff_detail.html  staff_detail.tex
