[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "django-persian-pdf"
version = "0.1.3"
description = "Django class based views to generate pdf files using html or latex template."
keywords = [
  "pdf",
  "django",
  "persian",
  "xelatex",
]
license = {text = "MIT"}
maintainers = [{name = "Ali Abharya", email = "abharya.dev@gmail.com"}]
authors = [{name = "Ali Abharya", email = "abharya.dev@gmail.com"}]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dependencies = [
  "Django>=3.2",
]
[project.urls]
Changelog = "https://github.com/bindruid/django-persian-pdf/blob/master/CHANGELOG.rst"
Repository = "https://github.com/bindruid/django-persian-pdf"

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --ds=tests.settings
    """
django_find_project = false

[tool.rstcheck]
report_level = 'ERROR'

[tool.ruff]
exclude = [
    '.eggs',
    '.git',
    '.ipynb_checkpoints',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.pyenv',
    '.pytest_cache',
    '.pytype',
    '.ruff_cache',
    '.tox',
    '.venv',
    '.vscode',
    '__pypackages__',
    '_build',
    'build',
    'dist',
    'migrations',
    'settings',
    'site-packages',
    'venv',
]
src = ['src', 'tests']
include = ['*.py']
line-length = 120
output-format = 'grouped'
target-version = 'py311'

[tool.ruff.lint]
# DJ = Django
# S = Bandit Security
# SIM = Simplify
# E = Pycodestyle Error
# F = Pyflask
# C4 = Comprehensions
# BLE = Blind Exception
# I = Isort
select = ['DJ', 'S', 'SIM', 'C4', 'E', 'F', 'BLE', 'I']
ignore = ['E501', 'DJ001']
fixable = ['I']

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']
'*test*.py' = ['S']
'*factories*.py' = ['S']

[tool.ruff.format]
quote-style = 'single'
docstring-code-format = true
